useLayoutEffect hook used for firing Intersection Observer for the table headers. Modified rootMargin to avoid flickering of table headers (adding then removing isScrolling class). Add null checks to prevent firing Intersection Observer when modal closes. Also added check to prevent firing Intersection Observer on initial component mount.

--- a/src/Styles/Components/chart.scss
+++ b/src/Styles/Components/chart.scss
@@ -17,7 +17,12 @@
   top: 0;
   padding: 0;
   margin: 0;
-  box-shadow: 0 2px 2px -1px rgba(0, 0, 0, 0.4);
+  transition: all 200ms ease-in-out;
+}
+
+.isScrolling {
   background-color: rgb(31, 29, 29);
   color: $white-color;
+  box-shadow: 0 2px 2px -1px rgba(0, 0, 0, 0.4);
+  transition: all 200ms ease-in-out;
 }
